feat: 支持https，完善分行